# rust-axum-MWE

./: README.md
n01_hello_world/: Cargo.toml
n01_hello_world/src/: main.rs
